--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>Index</title>
         <style>
-         h1{
+         h1
+         {
             color:tomato;
             background-color: turquoise;
          }
@@ -10,6 +11,7 @@
     </head>
     <body>
         <h1>Welcome to Git Hub</h1>
+        <h1>Git hosting</h1>
 
     </body>
 </html>
